--- a/src/styles/layout/sidebar/variables.less
+++ b/src/styles/layout/sidebar/variables.less
@@ -1074,19 +1074,23 @@
 @sidebar-submenu-item-link-padding-right-screen-jumbo: 32px;
 
 /*
- * Sidebar Dock
+ * Sidebar Footer
  */
 
-@sidebar-dock-container-padding-vertical: @pod-margin-top *@pod-short-margin-top-scale;
-@sidebar-dock-container-padding-vertical-screen-small: @pod-margin-top-screen-small *@pod-short-margin-top-scale;
-@sidebar-dock-container-padding-vertical-screen-medium: @pod-margin-top-screen-medium *@pod-short-margin-top-scale;
-@sidebar-dock-container-padding-vertical-screen-large: @pod-margin-top-screen-large *@pod-short-margin-top-scale;
-@sidebar-dock-container-padding-vertical-screen-jumbo: @pod-margin-top-screen-jumbo *@pod-short-margin-top-scale;
+/* Layout */
 
-@sidebar-dock-container-padding-horizontal: @pod-margin-left;
-@sidebar-dock-container-padding-horizontal-screen-small: @pod-margin-left-screen-small;
-@sidebar-dock-container-padding-horizontal-screen-medium: @pod-margin-left-screen-medium;
-@sidebar-dock-container-padding-horizontal-screen-large: @pod-margin-left-screen-large;
-@sidebar-dock-container-padding-horizontal-screen-jumbo: @pod-margin-left-screen-jumbo;
+// Bottom
 
-@sidebar-dock-container-border-color: color-lighten(@neutral, -50);
+@sidebar-footer-bottom: 12px;
+@sidebar-footer-bottom-screen-small: null;
+@sidebar-footer-bottom-screen-medium: null;
+@sidebar-footer-bottom-screen-large: null;
+@sidebar-footer-bottom-screen-jumbo: 16px;
+
+// Right
+
+@sidebar-footer-right: 12px;
+@sidebar-footer-right-screen-small: null;
+@sidebar-footer-right-screen-medium: null;
+@sidebar-footer-right-screen-large: null;
+@sidebar-footer-right-screen-jumbo: 16px;
