feat(FrameworkConfiguration): flow for deploy framework Using a DeployFrameworkConfiguration and using shared framework configuration for the form.

--- a/src/styles/components/alert/styles.less
+++ b/src/styles/components/alert/styles.less
@@ -29,6 +29,11 @@
       color: @alert-success-foreground;
     }
 
+    &-warning {
+      background: @alert-warning-background;
+      color: @alert-warning-foreground;
+    }
+
     a,
     li {
       color: inherit;
