--- a/src/styles/components/alert/variables.less
+++ b/src/styles/components/alert/variables.less
@@ -6,6 +6,9 @@
 @alert-success-background: fade(@success-color, 10%);
 @alert-success-foreground: @success-color;
 
+@alert-warning-background: fade(@warning-color, 10%);
+@alert-warning-foreground: @warning-color;
+
 @alert-border-radius: @button-border-radius;
 
 @alert-margin-bottom: @pod-margin-bottom;
