style(page-header): Update markup structure and basic styling of Page Header
Simplify the markup of the page header to support a more generalized structure. Reduce style specificity.

--- a/src/styles/layout/page-header/breadcrumbs/variables.less
+++ b/src/styles/layout/page-header/breadcrumbs/variables.less
@@ -42,3 +42,86 @@
 @page-header-breadcrumb-content-supplemental-margin-horizontal-screen-medium: @base-spacing-unit-screen-medium * 1/4;
 @page-header-breadcrumb-content-supplemental-margin-horizontal-screen-large: @base-spacing-unit-screen-large * 1/4;
 @page-header-breadcrumb-content-supplemental-margin-horizontal-screen-jumbo: @base-spacing-unit-screen-jumbo * 1/4;
+
+/*
+ * Page Header Breadcrumbs
+ */
+
+// Layout
+
+@page-header-breadcrumbs-margin-right: @base-spacing-unit * 0.25;
+@page-header-breadcrumbs-margin-right-screen-small: @base-spacing-unit-screen-small * 0.25;
+@page-header-breadcrumbs-margin-right-screen-medium: @base-spacing-unit-screen-medium * 0.25;
+@page-header-breadcrumbs-margin-right-screen-large: @base-spacing-unit-screen-large * 0.25;
+@page-header-breadcrumbs-margin-right-screen-jumbo: @base-spacing-unit-screen-jumbo * 0.25;
+
+/*
+ * Page Header Breadcrumb
+ */
+
+// Text Styling
+
+/* Normal */
+
+@page-header-breadcrumbs-color: color-lighten(@neutral, 0);
+@page-header-breadcrumbs-font-weight: 400;
+
+/* Emphasis (.emphasis) */
+
+@page-header-breadcrumbs-emphasis-color: color-lighten(@neutral, -20);
+@page-header-breadcrumbs-emphasis-font-weight: 800;
+
+/* Muted (.muted) */
+
+@page-header-breadcrumbs-muted-color: color-lighten(@neutral, 60);
+@page-header-breadcrumbs-muted-font-weight: 300;
+
+/* Inverse (.inverse) */
+
+@page-header-breadcrumbs-inverse-color: color-lighten(@neutral, 100);
+
+/* Inverse Emphasis (.inverse.emphasis) */
+
+@page-header-breadcrumbs-inverse-emphasis-color: color-lighten(@neutral, 100);
+
+/* Inverse Muted (.inverse.muted) */
+
+@page-header-breadcrumbs-inverse-muted-color: color-lighten(@neutral, 40);
+
+// Text Size
+
+/* Font Size */
+
+@page-header-breadcrumbs-font-size: 1.45rem;
+
+/* Line Height */
+
+@page-header-breadcrumbs-line-height: @page-header-breadcrumbs-font-size * 1.1;
+
+// Layout
+
+/* Margin */
+
+@page-header-breadcrumbs-margin-top: 1.7rem;
+@page-header-breadcrumbs-margin-top-screen-medium: 1.1 * 1.7rem;
+@page-header-breadcrumbs-margin-top-screen-large: 1.2 * 1.7rem;
+
+@page-header-breadcrumbs-margin-bottom: 1.3rem;
+@page-header-breadcrumbs-margin-bottom-screen-medium: 1.1 * 1.3rem;
+@page-header-breadcrumbs-margin-bottom-screen-large: 1.2 * 1.3rem;
+
+/* Layout Variants */
+
+@page-header-breadcrumbs-short-margin-top-scale: 0.5;
+@page-header-breadcrumbs-short-margin-bottom-scale: 0.5;
+
+@page-header-breadcrumbs-tall-margin-top-scale: 2;
+@page-header-breadcrumbs-tall-margin-bottom-scale: 2;
+
+@page-header-breadcrumbs-link-color: color-lighten(@neutral, 0);
+
+@page-header-breadcrumb-item-icon-container-padding-left: @icon-small-width + @base-spacing-unit * 1/4;
+@page-header-breadcrumb-item-icon-container-padding-left-screen-small: @icon-small-width + @base-spacing-unit-screen-small * 1/4;
+@page-header-breadcrumb-item-icon-container-padding-left-screen-medium: @icon-small-width + @base-spacing-unit-screen-medium * 1/4;
+@page-header-breadcrumb-item-icon-container-padding-left-screen-large: @icon-small-width + @base-spacing-unit-screen-large * 1/4;
+@page-header-breadcrumb-item-icon-container-padding-left-screen-jumbo: @icon-small-width + @base-spacing-unit-screen-jumbo * 1/4;
