--- a/src/styles/layout/page-header/navigation/variables.less
+++ b/src/styles/layout/page-header/navigation/variables.less
@@ -1,7 +1,7 @@
 @page-header-dropdown-menu-button-height: @button-height + @base-spacing-unit / 3;
 @page-header-dropdown-menu-button-height-screen-small: @button-height + @base-spacing-unit-screen-small / 3;
 
-@page-header-navigation-dropdown-border-color: color-lighten(@page-header-border-color, 40);
+@page-header-navigation-dropdown-border-color: color-lighten(@grey-dark, 40);
 @page-header-navigation-dropdown-item-active-color: @purple;
 
 @page-header-navigation-dropdown-margin-left: @pod-margin-left * -1;
